--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -29,6 +29,32 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <!-- to check conventional coverage if we like -->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+            </plugin>
+            <plugin>
+                <!-- to check more strict coverage -->
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.1.11</version>
+                <configuration>
+                    <targetClasses>
+                        <param>com.adaptionsoft.games.uglytrivia.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>com.adaptionsoft.games.uglytrivia.*</param>
+                    </targetTests>
+                    <threads>2</threads>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
