--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -4,6 +4,7 @@
 
     <groupId>com.adaptionsoft.games</groupId>
     <artifactId>uglytrivia</artifactId>
+    <name>Ugly Trivia with Approvals Kata Setup</name>
     <version>1.0-SNAPSHOT</version>
     <description>Legacy Code Retreat</description>
 
