--- a/JavaScript/package.json
+++ b/JavaScript/package.json
@@ -5,7 +5,10 @@
   "dependencies": {},
   "devDependencies": {
     "jasmine-node": "1.14.5",
-    "chai": "3.5.0"
+    "chai": "3.5.0",
+    "istanbul": "0.4.5",
+    "jslint": "0.10.3",
+    "jshint": "2.9.4"
   },
   "scripts": {
     "test": "jasmine-node test"
