--- a/JavaScript/.jslint.conf
+++ b/JavaScript/.jslint.conf
@@ -1,5 +1,5 @@
 {
     "indent":2,
     "white":true,
-    "predef": "require,describe,it,expect"
+    "predef": "require,describe,it,expect,beforeEach,afterEach"
 }
