Rename Game namespace to Trivia.

--- a/PHP/composer.json
+++ b/PHP/composer.json
@@ -9,7 +9,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Game\\": "src\/Game\/"
+            "Trivia\\": "src\/Trivia\/"
         }
     },
     "require": {
