Retroport old reporters and add KDiffreporter.

--- a/PHP/composer.json
+++ b/PHP/composer.json
@@ -10,7 +10,8 @@
     "autoload": {
         "psr-4": {
             "Trivia\\": "src\/Trivia\/",
-            "PHPUnit\\": "test\/PHPUnit\/"
+            "PHPUnit\\": "test\/PHPUnit\/",
+            "ApprovalTests\\": "test\/ApprovalTests\/"
         }
     },
     "require": {
