--- a/PHP/composer.json
+++ b/PHP/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "uglytrivia",
+    "name": "trivia-with-approvals-kata",
     "description": "Legacy Code Retreat",
     "license": "GPL-3.0",
     "authors": [
