--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.adaptionsoft.games</groupId>
-    <artifactId>uglytrivia</artifactId>
+    <artifactId>trivia-with-approvals-kata</artifactId>
     <name>Ugly Trivia with Approvals Kata Setup</name>
     <version>1.0-SNAPSHOT</version>
     <description>Legacy Code Retreat</description>
