--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -3,8 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.adaptionsoft.games</groupId>
-    <artifactId>trivia-with-approvals-kata</artifactId>
+    <artifactId>uglytrivia-with-approvals-kata</artifactId>
     <name>Ugly Trivia with Approvals Kata Setup</name>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <description>Legacy Code Retreat</description>
 
