--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -19,15 +19,14 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.7.14</version>
+            <version>2.28.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.approvaltests</groupId>
-            <artifactId>ApprovalTests</artifactId>
-            <version>0.17</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/ApprovalTests.017/ApprovalTests.jar</systemPath>
+            <groupId>com.approvaltests</groupId>
+            <artifactId>approvaltests</artifactId>
+            <version>4.0.2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -43,7 +42,7 @@
                 <!-- to check more strict coverage -->
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
-                <version>1.1.11</version>
+                <version>1.4.10</version>
                 <configuration>
                     <targetClasses>
                         <param>com.adaptionsoft.*</param>
@@ -51,7 +50,10 @@
                     <targetTests>
                         <param>com.adaptionsoft.*</param>
                     </targetTests>
-                    <threads>2</threads>
+                    <mutators>
+                        <mutator>ALL</mutator>
+                    </mutators>
+                    <threads>4</threads>
                 </configuration>
             </plugin>
         </plugins>
