--- a/JavaScript/package.json
+++ b/JavaScript/package.json
@@ -11,14 +11,14 @@
   "readmeFilename": "README.md",
   "dependencies": {},
   "devDependencies": {
-    "jasmine-node": "1.14.5",
-    "chai": "3.5.0",
-    "approvals": "1.3.0",
-    "istanbul": "0.4.5",
-    "jslint": "0.10.3",
-    "jshint": "2.9.4"
+    "chai": "4.2.0",
+    "approvals": "3.0.5",
+    "nyc": "12.0.1",
+    "jslint": "0.12.1",
+    "jshint": "2.11.0",
+    "mocha": "6.2.2"
   },
   "scripts": {
-    "test": "jasmine-node test"
+    "test": "mocha test --recursive"
   }
 }
