--- a/Kotlin/build.gradle
+++ b/Kotlin/build.gradle
@@ -15,11 +15,11 @@ repositories {
 }
 
 test {
-    useJUnitPlatform()
+    useJUnit()
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.0'
+    testImplementation 'junit:junit:4.12'
     testImplementation 'com.approvaltests:approvaltests:4.0.2'
 }
