--- a/Csharp/Trivia.Tests/Trivia.Tests.csproj
+++ b/Csharp/Trivia.Tests/Trivia.Tests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.console" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="ApprovalTests" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
